test/tests/errors/error-file-cannot-assign2.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    file g withbuffer bg: int;
    g = f;
}